--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-otp-input": "^3.1.1",
+    "react-phone-number-input": "^3.4.12",
     "zod": "^4.0.14"
   },
   "devDependencies": {
