--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "next": "15.4.4",
     "react": "19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "19.1.0",
     "react-easy-crop": "^5.5.0",
     "react-hook-form": "^7.61.1",
