--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-datepicker": "^8.4.0",
