--- a/example.env
+++ b/example.env
@@ -1,3 +1,2 @@
-NEXT_PUBLIC_API_RUN_MODE = 'DEV'
-NEXT_PUBLIC_API_HOST = ''
-NEXT_PUBLIC_APP_URL = ''
+NEXT_PUBLIC_API_HOST = https://qedwed.duckdns.org
+NEXT_PUBLIC_UPLOAD_URL= https://qedwed.duckdns.org/uploads
