--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "highcharts-react-official": "^3.2.2",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
-    "next": "^15.4.4",
-    "react": "^18.3.0",
+    "next": "15.4.4",
+    "react": "19.1.0",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^18.3.0",
+    "react-dom": "19.1.0",
     "react-easy-crop": "^5.5.0",
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
